--- a/src/css/style.css
+++ b/src/css/style.css
@@ -31,7 +31,7 @@ header {
 
 /* Content */
 
-/* Content */
+/* Carrusel */
 #carrusel-slider{
 	margin-bottom: 50px;
 }
@@ -44,4 +44,22 @@ header {
 	text-align: left;
 	width:340px;
 }
+/* Info Content */
+h3{
+	border-bottom: 1px solid;
+	padding-bottom:10px;
+	margin-bottom: 15px;
+}
+/* Icons inside h3 */
+h3 i{
+	color:#2c2d31;
+}
+p {
+	font-size:16px;
+}
+/*Helpers*/
+.mar-top-80{
+	margin-top:60px;
+}
+
 /* Footer */
